# hkscs-unicode-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/hkscs_converter/: converter.py
src/hkscs_unicode_converter/: converter.py
src/hkscs_unicode_converter/data/: config.json  hkscs2016.json
src/hkscs_unicode_converter/test/: test_char.py  test_string.py
