[metadata]
name = hkscs-unicode-converter
version = 0.0.1
author = Aaron Tan
author_email = hi@aaronhktan.com
description = Convert HKSCS characters in the Private Use Areas of Unicode to corresponding new codepoints in Unicode 4.1 onwards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronhktan/hkscs-unicode-converter
project_urls =
    Bug Tracker = https://github.com/aaronhktan/hkscs-unicode-converter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* = *.tsv, *.json
